examples/test/testpolicy5349.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5349
  namespace: namespace198
spec:
  podSelector:
    matchLabels:
      key49: value36
      key19: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value8
          key36: value4
      podSelector:
        matchLabels:
          key43: value37
          key20: value14
          key25: value26
